--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,10 @@
         "php": "^8.1",
         "abbasudo/laravel-purity": "^1.0",
         "guzzlehttp/guzzle": "^7.2",
+        "intervention/image": "^2.7",
         "laravel/framework": "^10.8",
         "laravel/sanctum": "^3.2",
+        "laravel/telescope": "^4.14",
         "laravel/tinker": "^2.8"
     },
     "require-dev": {
